# EconLife-sim

./: .clang-format  .git-blame-ignore-revs  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CODEX.md
simulation/cli/: CMakeLists.txt  cli_main.cpp  interactive_json.cpp  interactive_json.h
simulation/core/: CMakeLists.txt  core_placeholder.cpp  good_id_hash.h
simulation/core/config/: package_config.cpp  package_config.h
simulation/core/rng/: CLAUDE.md  deterministic_rng.cpp  deterministic_rng.h
simulation/core/tick/: CLAUDE.md  deferred_work.h  drain_deferred_work.cpp  drain_deferred_work.h  package_manager.h  thread_pool.cpp  thread_pool.h  tick_module.h  tick_orchestrator.cpp  tick_orchestrator.h
simulation/core/world_gen/: facility_generator.cpp  facility_generator.h  facility_type_catalog.cpp  facility_type_catalog.h  goods_catalog.cpp  goods_catalog.h  h3_utils.cpp  h3_utils.h  nation_generator.cpp  nation_generator.h  recipe_catalog.cpp  recipe_catalog.h  settlement_generator.cpp  settlement_generator.h  technology_catalog.cpp  technology_catalog.h  world_generator.cpp  world_generator.h
simulation/core/world_state/: CLAUDE.md  apply_deltas.cpp  apply_deltas.h  cross_province_delta_buffer.cpp  delta_buffer.cpp  delta_buffer.h  geography.cpp  geography.h  npc.h  player.h  player_action_queue.cpp  player_action_queue.h  player_action_types.h  shared_types.h  world_state.h
simulation/modules/: CMakeLists.txt  register_base_game_modules.cpp  register_base_game_modules.h
simulation/modules/addiction/: CLAUDE.md  CMakeLists.txt  addiction_module.cpp  addiction_module.h  addiction_types.h
simulation/modules/alternative_identity/: CLAUDE.md  CMakeLists.txt  alternative_identity_module.cpp  alternative_identity_module.h  alternative_identity_types.h
simulation/modules/antitrust/: CLAUDE.md  CMakeLists.txt  antitrust_module.cpp  antitrust_module.h  antitrust_types.h
simulation/modules/banking/: CLAUDE.md  CMakeLists.txt  banking_module.cpp  banking_module.h  banking_types.h
simulation/modules/business_lifecycle/: CLAUDE.md  CMakeLists.txt  business_lifecycle_module.cpp  business_lifecycle_module.h
simulation/modules/calendar/: CLAUDE.md  CMakeLists.txt  calendar_module.cpp  calendar_module.h  calendar_types.h
simulation/modules/commodity_trading/: CLAUDE.md  CMakeLists.txt  commodity_trading_module.cpp  commodity_trading_module.h  commodity_trading_types.h
simulation/modules/community_response/: CLAUDE.md  CMakeLists.txt  community_response_module.cpp  community_response_module.h  community_response_types.h
simulation/modules/criminal_operations/: CLAUDE.md  CMakeLists.txt  criminal_operations_module.cpp  criminal_operations_module.h  criminal_operations_types.h
simulation/modules/currency_exchange/: CLAUDE.md  CMakeLists.txt  currency_exchange_module.cpp  currency_exchange_module.h  currency_exchange_types.h
simulation/modules/designer_drug/: CLAUDE.md  CMakeLists.txt  designer_drug_module.cpp  designer_drug_module.h  designer_drug_types.h
simulation/modules/drug_economy/: CLAUDE.md  CMakeLists.txt  drug_economy_module.cpp  drug_economy_module.h  drug_economy_types.h
simulation/modules/economy/: economy_types.h  financial_types.h
simulation/modules/evidence/: CLAUDE.md  CMakeLists.txt  evidence_module.cpp  evidence_module.h  evidence_types.h
simulation/modules/facility_signals/: CLAUDE.md  CMakeLists.txt  facility_signals_module.cpp  facility_signals_module.h  facility_signals_types.h
simulation/modules/financial_distribution/: CLAUDE.md  CMakeLists.txt  financial_distribution_module.cpp  financial_distribution_module.h  financial_distribution_types.h
simulation/modules/government_budget/: CLAUDE.md  CMakeLists.txt  budget_types.h  government_budget_module.cpp  government_budget_module.h
simulation/modules/healthcare/: CLAUDE.md  CMakeLists.txt  healthcare_module.cpp  healthcare_module.h  healthcare_types.h
simulation/modules/influence_network/: CLAUDE.md  CMakeLists.txt  influence_network_module.cpp  influence_network_module.h  influence_network_types.h
simulation/modules/informant_system/: CLAUDE.md  CMakeLists.txt  informant_system_module.cpp  informant_system_module.h  informant_system_types.h
simulation/modules/investigator_engine/: CLAUDE.md  CMakeLists.txt  investigator_engine_module.cpp  investigator_engine_module.h  investigator_engine_types.h
simulation/modules/labor_market/: CLAUDE.md  CMakeLists.txt  labor_market_module.cpp  labor_market_module.h  labor_types.h
simulation/modules/legal_process/: CLAUDE.md  CMakeLists.txt  legal_process_module.cpp  legal_process_module.h  legal_process_types.h
simulation/modules/lod_system/: CLAUDE.md  CMakeLists.txt  lod_system_module.cpp  lod_system_module.h  lod_system_types.h
simulation/modules/media_system/: CLAUDE.md  CMakeLists.txt  media_system_module.cpp  media_system_module.h  media_system_types.h
simulation/modules/money_laundering/: CLAUDE.md  CMakeLists.txt  money_laundering_module.cpp  money_laundering_module.h  money_laundering_types.h
simulation/modules/npc_behavior/: CLAUDE.md  CMakeLists.txt  npc_behavior_module.cpp  npc_behavior_module.h  npc_behavior_types.h
simulation/modules/npc_business/: CLAUDE.md  CMakeLists.txt  npc_business_module.cpp  npc_business_module.h  npc_business_types.h
simulation/modules/npc_spending/: CLAUDE.md  CMakeLists.txt  npc_spending_module.cpp  npc_spending_module.h  npc_spending_types.h
simulation/modules/obligation_network/: CLAUDE.md  CMakeLists.txt  obligation_network_module.cpp  obligation_network_module.h  obligation_network_types.h
simulation/modules/persistence/: CLAUDE.md  CMakeLists.txt  persistence_module.cpp  persistence_module.h  persistence_types.h
simulation/modules/player_actions/: CLAUDE.md  CMakeLists.txt  player_actions_module.cpp  player_actions_module.h
simulation/modules/political_cycle/: CLAUDE.md  CMakeLists.txt  political_cycle_module.cpp  political_cycle_module.h  political_cycle_types.h
simulation/modules/population_aging/: CLAUDE.md  CMakeLists.txt  population_aging_module.cpp  (+2 more)
(+260 files in other folders)
