# Unit tests — module existence, individual module tests
add_executable(econlife_unit_tests
    module_exists_test.cpp
    rng_test.cpp
    deferred_work_queue_test.cpp
    tick_orchestrator_test.cpp
    thread_pool_test.cpp
    production_test.cpp
    calendar_test.cpp
    scene_cards_test.cpp
    random_events_test.cpp
    supply_chain_test.cpp
    seasonal_agriculture_test.cpp
    labor_market_test.cpp
    price_engine_test.cpp
    trade_infrastructure_test.cpp
    financial_distribution_test.cpp
    npc_business_test.cpp
    commodity_trading_test.cpp
    real_estate_test.cpp
    npc_behavior_test.cpp
    banking_test.cpp
    government_budget_test.cpp
    healthcare_test.cpp
    npc_spending_test.cpp
    evidence_test.cpp
    obligation_network_test.cpp
    community_response_test.cpp
    facility_signals_test.cpp
    criminal_operations_test.cpp
    media_system_test.cpp
    antitrust_test.cpp
    investigator_engine_test.cpp
    money_laundering_test.cpp
    drug_economy_test.cpp
    weapons_trafficking_test.cpp
    protection_rackets_test.cpp
    legal_process_test.cpp
    informant_system_test.cpp
    alternative_identity_test.cpp
    designer_drug_test.cpp
    political_cycle_test.cpp
    influence_network_test.cpp
    trust_updates_test.cpp
    addiction_test.cpp
    regional_conditions_test.cpp
    population_aging_test.cpp
    currency_exchange_test.cpp
    lod_system_test.cpp
    persistence_test.cpp
    apply_deltas_test.cpp
    drain_deferred_work_test.cpp
    world_generator_test.cpp
    recipe_catalog_test.cpp
    facility_type_catalog_test.cpp
    technology_catalog_test.cpp
)

target_link_libraries(econlife_unit_tests PRIVATE
    Catch2::Catch2WithMain
    econlife_modules
)

catch_discover_tests(econlife_unit_tests)
